RM-9103 Fix resource generation in Web.Test.Shared

--- a/Remotion/Web/Test.Shared/Web.Test.Shared.csproj
+++ b/Remotion/Web/Test.Shared/Web.Test.Shared.csproj
@@ -8,6 +8,7 @@
     <AssemblyName>Remotion.Web.Test.Shared</AssemblyName>
     <RootNamespace>$(AssemblyName)</RootNamespace>
     <Nullable>disable</Nullable>
+    <GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
   </PropertyGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
     <Reference Include="System.Configuration" />
@@ -19,6 +20,9 @@
     <ProjectReference Include="..\..\Globalization\Core\Globalization.Core.csproj" />
     <ProjectReference Include="..\..\Security\Core\Security.Core.csproj" />
     <ProjectReference Include="..\Core\Web.Core.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Resources.Extensions" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
 </Project>
