RM-9246 Convert the non-SDK style test sites to SDK-style projects

--- a/Remotion/ObjectBinding/Web.Development.WebTesting.TestSite.Shared/ObjectBinding.Web.Development.WebTesting.TestSite.Shared.csproj
+++ b/Remotion/ObjectBinding/Web.Development.WebTesting.TestSite.Shared/ObjectBinding.Web.Development.WebTesting.TestSite.Shared.csproj
@@ -30,7 +30,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="UrlMapping.xml" />
+    <Content Include="UrlMapping.xml" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
 </Project>
