RM-9253 Fix reference of app packages

--- a/Remotion/ObjectBinding/Web.Development.WebTesting.IntegrationTests/ObjectBinding.Web.Development.WebTesting.IntegrationTests.csproj
+++ b/Remotion/ObjectBinding/Web.Development.WebTesting.IntegrationTests/ObjectBinding.Web.Development.WebTesting.IntegrationTests.csproj
@@ -11,8 +11,12 @@
     <SignAssembly>False</SignAssembly>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\..\..\SharedSource\Development\NUnit\UnitTesting\*.cs" Link="SharedSource\NUnit\UnitTesting\%(Filename)%(Extension)" />
     <EmbeddedResource Include="SavedTestScreenshots\**\*.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="..\..\..\SharedSource\Development\NUnit\UnitTesting\*.cs" Link="SharedSource\NUnit\UnitTesting\%(Filename)%(Extension)" />
+    <Compile Include="..\..\..\SharedSource\Core\Utilities\Assertion.cs" Link="SharedSource\Utilites\%(Filename)%(Extension)" />
+    <Compile Include="..\..\..\SharedSource\Core\RoslynAnnotations\NullableAnnotations.cs" Link="SharedSource\RoslynAnnotations\NullableAnnotations.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Web\Contracts.DiagnosticMetadata\Web.Contracts.DiagnosticMetadata.csproj" />
