--- a/Remotion/Web/Development.WebTesting.TestSite.Infrastructure/Web.Development.WebTesting.TestSite.Infrastructure.csproj
+++ b/Remotion/Web/Development.WebTesting.TestSite.Infrastructure/Web.Development.WebTesting.TestSite.Infrastructure.csproj
@@ -24,7 +24,7 @@
     <ProjectReference Include="..\..\Core\Core\Core.Core.csproj" />
     <ProjectReference Include="..\Core\Web.Core.csproj" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
+  <ItemGroup Condition="'$(IsDotNetFramework)' == 'true'">
     <PackageReference Include="System.Text.Json" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
