--- a/Remotion/Core/Extensions/Core.Extensions.csproj
+++ b/Remotion/Core/Extensions/Core.Extensions.csproj
@@ -19,7 +19,7 @@
     <ProjectReference Include="..\Core\Core.Core.csproj" />
     <ProjectReference Include="..\Reflection\Core.Reflection.csproj" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
+  <ItemGroup Condition="'$(IsDotNetFramework)' == 'true'">
     <Reference Include="System.Configuration" />
     <Reference Include="System.Transactions" />
   </ItemGroup>
