--- a/Remotion/Core/Reflection.CodeGeneration.TypePipe/Core.Reflection.CodeGeneration.TypePipe.csproj
+++ b/Remotion/Core/Reflection.CodeGeneration.TypePipe/Core.Reflection.CodeGeneration.TypePipe.csproj
@@ -18,7 +18,7 @@
     <PackageReference Include="Remotion.TypePipe" />
     <PackageReference Remove="JetBrains.Annotations" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
+  <ItemGroup Condition="'$(IsDotNetFramework)' == 'true'">
     <Reference Include="System.Configuration" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
