--- a/Remotion/Data/DomainObjects.ObjectBinding.IntegrationTests/Data.DomainObjects.ObjectBinding.IntegrationTests.csproj
+++ b/Remotion/Data/DomainObjects.ObjectBinding.IntegrationTests/Data.DomainObjects.ObjectBinding.IntegrationTests.csproj
@@ -28,7 +28,7 @@
     <ProjectReference Include="..\DomainObjects.Security\Data.DomainObjects.Security.csproj" />
     <ProjectReference Include="..\DomainObjects\Data.DomainObjects.csproj" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
+  <ItemGroup Condition="'$(IsDotNetFramework)' == 'true'">
     <Reference Include="System.Transactions" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
