--- a/Remotion/Data/DomainObjects.ObjectBinding.UnitTests/Data.DomainObjects.ObjectBinding.UnitTests.csproj
+++ b/Remotion/Data/DomainObjects.ObjectBinding.UnitTests/Data.DomainObjects.ObjectBinding.UnitTests.csproj
@@ -26,7 +26,7 @@
     <ProjectReference Include="..\DomainObjects.ObjectBinding\Data.DomainObjects.ObjectBinding.csproj" />
     <ProjectReference Include="..\DomainObjects\Data.DomainObjects.csproj" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
+  <ItemGroup Condition="'$(IsDotNetFramework)' == 'true'">
     <Reference Include="System.Transactions" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
