--- a/Remotion/Data/DomainObjects/Data.DomainObjects.csproj
+++ b/Remotion/Data/DomainObjects/Data.DomainObjects.csproj
@@ -29,10 +29,10 @@
     <PackageReference Include="Remotion.Linq.SqlBackend" />
     <PackageReference Include="Remotion.TypePipe" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
+  <ItemGroup Condition="'$(IsDotNetFramework)' == 'true'">
     <Reference Include="System.Configuration" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' != 'net48'">
+  <ItemGroup Condition="'$(IsDotNetFramework)' == 'false'">
     <PackageReference Include="System.Data.SqlClient" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
