--- a/Remotion/Security/Core/Security.Core.csproj
+++ b/Remotion/Security/Core/Security.Core.csproj
@@ -17,7 +17,7 @@
     <ProjectReference Include="..\..\Core\Xml\Core.Xml.csproj" />
     <ProjectReference Include="..\..\Globalization\Core\Globalization.Core.csproj" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
+  <ItemGroup Condition="'$(IsDotNetFramework)' == 'true'">
     <Reference Include="System.Configuration" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
