--- a/Remotion/Web/Development.WebTesting/Web.Development.WebTesting.csproj
+++ b/Remotion/Web/Development.WebTesting/Web.Development.WebTesting.csproj
@@ -27,11 +27,11 @@
     <PackageReference Include="Selenium.Support" />
     <PackageReference Include="Selenium.WebDriver" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' != 'net48'">
+  <ItemGroup Condition="'$(IsDotNetFramework)' == 'false'">
     <PackageReference Include="Microsoft.Extensions.Hosting" />
     <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
+  <ItemGroup Condition="'$(IsDotNetFramework)' == 'true'">
     <Reference Include="System.Configuration" />
   </ItemGroup>
   <ItemGroup>
