--- a/SecurityManager/Clients.Web.Test.SetupDB/SecurityManager.Clients.Web.Test.SetupDB.csproj
+++ b/SecurityManager/Clients.Web.Test.SetupDB/SecurityManager.Clients.Web.Test.SetupDB.csproj
@@ -14,7 +14,7 @@
   <ItemGroup>
     <PackageReference Include="System.Configuration.ConfigurationManager" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' != 'net48'">
+  <ItemGroup Condition="'$(IsDotNetFramework)' == 'false'">
     <PackageReference Include="System.Data.SqlClient" />
   </ItemGroup>
   <Import Project="..\..\Build\Shared.build.targets" />
