--- a/Remotion/Mixins/CrossReferencer/Mixins.CrossReferencer.csproj
+++ b/Remotion/Mixins/CrossReferencer/Mixins.CrossReferencer.csproj
@@ -13,6 +13,7 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Remove="JetBrains.Annotations"/>
+        <Compile Include="..\..\..\SharedSource\Core\RoslynAnnotations\NullableAnnotations.cs" Link="SharedSource\RoslynAnnotations\NullableAnnotations.cs" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\..\Core\Core\Core.Core.csproj"/>
