RM-9250 Implement support for .NET DateOnly in ObjectBinding

--- a/Remotion/ObjectBinding/Web.Development.WebTesting.TestSite/App.config
+++ b/Remotion/ObjectBinding/Web.Development.WebTesting.TestSite/App.config
@@ -15,7 +15,11 @@
 
   <system.web>
     <globalization culture="de-AT" uiCulture="en-US"/>
-    <compilation debug="true" />
+    <compilation debug="true">
+      <assemblies>
+        <add assembly="System.Drawing.Primitives"/>
+      </assemblies>
+    </compilation>
     <httpModules>
       <add name="Session" type="System.Web.SessionState.SessionStateModule"/> 
     </httpModules>
