--- a/Remotion/Development/Core/Development.Core.csproj
+++ b/Remotion/Development/Core/Development.Core.csproj
@@ -14,7 +14,7 @@
   <ItemGroup>
     <Compile Include="..\..\..\SharedSource\Development\UnitTesting\**\*"
              Link="SharedSource\UnitTesting\%(RecursiveDir)%(Filename)%(Extension)"
-             Exclude="**\PEVerifyVersion.cs;**\NUnit\**" />
+             Exclude="**\NUnit\**" />
     <Compile Include="..\..\..\SharedSource\Core\RoslynAnnotations\NullableAnnotations.cs" Link="SharedSource\RoslynAnnotations\NullableAnnotations.cs" />
   </ItemGroup>
   <ItemGroup>
