--- a/Remotion/Data/DomainObjects.Web.Test/Data.DomainObjects.Web.Test.csproj
+++ b/Remotion/Data/DomainObjects.Web.Test/Data.DomainObjects.Web.Test.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
     <PropertyGroup>
-        <ProjectType>WebApplicationNetFramework</ProjectType>
+        <ProjectType>WebApplication</ProjectType>
+        <UseWindowsForms>true</UseWindowsForms>
     </PropertyGroup>
 
     <Import Project="..\..\..\Build\Shared.build.props" />
@@ -28,6 +28,17 @@
       <ProjectReference Include="..\DomainObjects.ObjectBinding\Data.DomainObjects.ObjectBinding.csproj" />
       <ProjectReference Include="..\DomainObjects.Security\Data.DomainObjects.Security.csproj" />
       <ProjectReference Include="..\DomainObjects\Data.DomainObjects.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Queries1.xml" />
+      <Content Include="Queries1.xml">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <None Remove="Queries2.xml" />
+      <Content Include="Queries2.xml">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
     <Import Project="..\..\..\Build\Shared.build.targets" />
