RM-7954 Switch Object.Binding.Web.Test to NET 8.0

--- a/Remotion/ObjectBinding/Web.Test/App.config
+++ b/Remotion/ObjectBinding/Web.Test/App.config
@@ -111,10 +111,12 @@
         <add tagPrefix="remotion" namespace="Remotion.ObjectBinding.Web.UI.Controls" assembly="Remotion.ObjectBinding.Web" />
         <add tagPrefix="remotion" namespace="Remotion.ObjectBinding.Web.UI.Controls.Validation" assembly="Remotion.ObjectBinding.Web" />
         <add tagPrefix="remotion" namespace="Remotion.Web.UI.Controls" assembly="Remotion.Web" />
+        <add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="CoreForms.Web" />
+        <add tagPrefix="asp" namespace="System.Web.UI" assembly="CoreForms.Web.Extensions" />
         <add tagPrefix="ros" namespace="Remotion.ObjectBinding.Sample" assembly="Remotion.ObjectBinding.Sample" />
       </controls>
     </pages>
-    <httpRuntime requestValidationMode="2.0" targetFramework="4.8" />
+    <httpRuntime requestValidationMode="2.0"/>
 
     <!--  DYNAMIC DEBUG COMPILATION
           Set compilation debug="true" to enable ASPX debugging.  Otherwise, setting this value to
@@ -125,7 +127,10 @@
           false at all other times. For more information, refer to the documentation about
           debugging ASP.NET files.
     -->
-    <compilation defaultLanguage="c#" debug="true" targetFramework="4.8">
+    <compilation defaultLanguage="c#" debug="true">
+      <assemblies>
+        <add assembly="System.Drawing.Primitives"/>
+      </assemblies>
     </compilation>
 
     <!--  CUSTOM ERROR MESSAGES
@@ -150,15 +155,12 @@
       tagwriter=System.Web.UI.HtmlTextWriter
     </browserCaps>
     <xhtmlConformance mode="Transitional" />
+    <httpHandlers>
+      <add verb="*" path="*.wxe" type="Remotion.Web.ExecutionEngine.WxeHandler, Remotion.Web" />
+      <add verb="*" path="WxeHandler.ashx" type="Remotion.Web.ExecutionEngine.WxeHandler, Remotion.Web" />
+    </httpHandlers>
+    <httpModules>
+      <add name="Session" type="System.Web.SessionState.SessionStateModule"/>
+    </httpModules>
   </system.web>
-
-  <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
-    <handlers>
-      <add name="WxeHandler" verb="*" path="*.wxe" preCondition="integratedMode" type="Remotion.Web.ExecutionEngine.WxeHandler, Remotion.Web" />
-      <add name="DefaultWxeHandler" verb="*" path="WxeHandler.ashx" preCondition="integratedMode" type="Remotion.Web.ExecutionEngine.WxeHandler, Remotion.Web" />
-    </handlers>
-    <modules runAllManagedModulesForAllRequests="true" />
-    <directoryBrowse enabled="true" />
-  </system.webServer>
 </configuration>
