RM-7958 Switch SecurityManager.Clients.Web.Test to NET 8.0

--- a/SecurityManager/Clients.Web.Test/App.config
+++ b/SecurityManager/Clients.Web.Test/App.config
@@ -18,11 +18,17 @@
       <controls>
         <add tagPrefix="remotion" namespace="Remotion.ObjectBinding.Web.UI.Controls" assembly="Remotion.ObjectBinding.Web" />
         <add tagPrefix="remotion" namespace="Remotion.Web.UI.Controls" assembly="Remotion.Web" />
+        <add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="CoreForms.Web" />
+        <add tagPrefix="asp" namespace="System.Web.UI" assembly="CoreForms.Web.Extensions" />
       </controls>
     </pages>
 
     <sessionState mode="InProc">
     </sessionState>
+
+    <httpModules>
+      <add name="Session" type="System.Web.SessionState.SessionStateModule"/>
+    </httpModules>
 
     <!-- 
           Set compilation debug="true" to insert debugging 
@@ -30,7 +36,7 @@
           affects performance, set this value to true only 
           during development.
       -->
-    <compilation defaultLanguage="c#" debug="true" targetFramework="4.8">
+    <compilation defaultLanguage="c#" debug="true">
       <expressionBuilders>
         <add expressionPrefix="res" type="Remotion.Web.Compilation.ResourceExpressionBuilder, Remotion.Web" />
       </expressionBuilders>
@@ -54,21 +60,11 @@
       </customErrors>
       -->
     <customErrors mode="Off" />
-    <httpRuntime requestValidationMode="2.0" targetFramework="4.8" />
+    <httpRuntime requestValidationMode="2.0"/>
     <globalization requestEncoding="utf-8" responseEncoding="utf-8" culture="de-AT" uiCulture="de-AT" />
+    <httpHandlers>
+      <add verb="*" path="*.wxe" type="Remotion.Web.ExecutionEngine.WxeHandler, Remotion.Web" />
+      <add verb="*" path="WxeHandler.ashx" type="Remotion.Web.ExecutionEngine.WxeHandler, Remotion.Web" />
+    </httpHandlers>
   </system.web>
-  <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
-    <handlers>
-      <add name="WxeHandler" verb="*" path="*.wxe" preCondition="integratedMode" type="Remotion.Web.ExecutionEngine.WxeHandler, Remotion.Web" />
-      <add name="DefaultWxeHandler" verb="*" path="WxeHandler.ashx" preCondition="integratedMode" type="Remotion.Web.ExecutionEngine.WxeHandler, Remotion.Web" />
-    </handlers>
-    <modules runAllManagedModulesForAllRequests="true"/>
-    <directoryBrowse enabled="true" />
-    <httpProtocol>
-      <customHeaders>
-        <add name="X-UA-Compatible" value="IE=Edge"/>
-      </customHeaders>
-    </httpProtocol>
-  </system.webServer>
 </configuration>
