--- a/Remotion/ObjectBinding/Web.Development.WebTesting.IntegrationTests/App.config
+++ b/Remotion/ObjectBinding/Web.Development.WebTesting.IntegrationTests/App.config
@@ -21,7 +21,7 @@
       verifyWebApplicationStartedTimeout="00:00:10"
       retryInterval="00:00:00.025"
       asyncJavaScriptTimeout="00:00:10"
-      headless="true"
+      headless="false"
       webApplicationRoot="http://localhost:60402/"
       screenshotDirectory=".\WebTestingOutput"
       logsDirectory=".\WebTestingOutput"
