show all error message

--- a/Remotion/ObjectBinding/Web.Development.WebTesting.TestSite/App.config
+++ b/Remotion/ObjectBinding/Web.Development.WebTesting.TestSite/App.config
@@ -23,6 +23,7 @@
     <httpModules>
       <add name="Session" type="System.Web.SessionState.SessionStateModule"/> 
     </httpModules>
+    <customErrors mode="Off" />
     <httpRuntime requestValidationMode="2.0" />
     <pages validateRequest="false">
       <controls>
