RM-9286 AspNetCoreHostingStrategy supports specifying hostname and whether to use https

--- a/Remotion/ObjectBinding/Web.IntegrationTests/App.config
+++ b/Remotion/ObjectBinding/Web.IntegrationTests/App.config
@@ -25,7 +25,7 @@
       closeBrowserWindowsOnSetUpAndTearDown="false"
       cleanUpUnmatchedDownloadedFiles="false"
       requestErrorDetectionStrategy="AspNet">
-    <hosting name="AspNetCore" type="AspNetCore" port="60402" />
+    <hosting name="AspNetCore" type="AspNetCore" port="60402" hostname="localhost" useHttps="false"/>
     <testSiteLayout rootPath=".\..\..\..\..\Web.Development.WebTesting.TestSite" processPath="bin\Remotion.ObjectBinding.Web.Development.WebTesting.TestSite.exe">
     <resources>
         <add path="..\..\ObjectBinding\Sample\res" />
