--- a/Remotion/Web/Development.WebTesting.IntegrationTests.RequireUI/App.config
+++ b/Remotion/Web/Development.WebTesting.IntegrationTests.RequireUI/App.config
@@ -27,7 +27,7 @@
       logsDirectory=".\WebTestingOutput"
       closeBrowserWindowsOnSetUpAndTearDown="false"
       cleanUpUnmatchedDownloadedFiles="false">
-    <hosting name="AspNetCore" type="AspNetCore" port="60401" />
+    <hosting name="AspNetCore" type="AspNetCore" port="60401" hostname="localhost" useHttps="false"/>
     <testSiteLayout rootPath=".\..\..\..\..\Development.WebTesting.TestSite" processPath="bin\Remotion.Web.Development.WebTesting.TestSite.exe">
       <resources>
         <add path="..\..\Web\Core\res" />
