--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,16 +3,18 @@
   <PropertyGroup>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
+
+    <CoreFormsVersion>8.2.3</CoreFormsVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageVersion Include="Castle.Core" Version="4.4.0" />
-    <PackageVersion Include="CoreForms.Web" Version="8.1.2" />
-    <PackageVersion Include="CoreForms.Web.Extensions" Version="8.1.2" />
-    <PackageVersion Include="CoreForms.Web.Infrastructure" Version="8.1.2" />
-    <PackageVersion Include="CoreForms.Web.Infrastructure.MachineConfig" Version="8.1.2" />
-    <PackageVersion Include="CoreForms.Web.Infrastructure.Roslyn" Version="8.1.2" />
-    <PackageVersion Include="CoreForms.Web.Services" Version="8.1.2" />
+    <PackageVersion Include="CoreForms.Web" Version="$(CoreFormsVersion)" />
+    <PackageVersion Include="CoreForms.Web.Extensions" Version="$(CoreFormsVersion)" />
+    <PackageVersion Include="CoreForms.Web.Infrastructure" Version="$(CoreFormsVersion)" />
+    <PackageVersion Include="CoreForms.Web.Infrastructure.MachineConfig" Version="$(CoreFormsVersion)" />
+    <PackageVersion Include="CoreForms.Web.Infrastructure.Roslyn" Version="$(CoreFormsVersion)" />
+    <PackageVersion Include="CoreForms.Web.Services" Version="$(CoreFormsVersion)" />
     <PackageVersion Include="Fork.Coypu" Version="3.4.0" />
     <PackageVersion Include="JetBrains.Annotations" Version="2022.1.0" />
     <PackageVersion Include="log4net" Version="2.0.15" />
