--- a/Remotion/Data/DomainObjects.RdbmsTools/Data.DomainObjects.RdbmsTools.csproj
+++ b/Remotion/Data/DomainObjects.RdbmsTools/Data.DomainObjects.RdbmsTools.csproj
@@ -11,6 +11,8 @@
     <PackageId>Remotion.Data.DomainObjects.RdbmsTools</PackageId>
     <RootNamespace>$(PackageId)</RootNamespace>
     <Nullable>disable</Nullable>
+    <!-- NuGet Package for MixerTools is disabled until APIs are fixed -->
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Core\Core.Core.csproj" />
