RM-9318 Prevent the cleanup of generated files from the TypeScript infrastructure

--- a/Remotion/Web/ClientScript/Web.ClientScript.csproj
+++ b/Remotion/Web/ClientScript/Web.ClientScript.csproj
@@ -10,5 +10,9 @@
     <AssemblyName>Remotion.Web.ClientScript</AssemblyName>
     <RootNamespace>$(AssemblyName)</RootNamespace>
   </PropertyGroup>
+  <ItemGroup>
+    <TypeScriptCompile Remove="bin\Debug\dist\Remotion.Web.ClientScript.d.ts"/>
+    <TypeScriptCompile Remove="bin\Release\dist\Remotion.Web.ClientScript.d.ts"/>
+  </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
 </Project>
