~ test parallel execution

--- a/NuGet.config
+++ b/NuGet.config
@@ -5,6 +5,7 @@
     <add key="re-motion Dependencies" value="https://nuget.re-motion.org/nuget/re-motion-debug/" />
     <add key="re-motion Infrastructure" value="https://nuget.re-motion.org/nuget/re-motion-infrastructure/" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="local" value="\\w1155\public\Nuget Packages" />
   </packageSources>
   <packageSourceMapping>
     <packageSource key="re-motion Dependencies">
@@ -20,6 +21,9 @@
     </packageSource>
     <packageSource key="nuget.org">
       <package pattern="*" />
+    </packageSource>
+    <packageSource key="local">
+      <package pattern="Remotion.BuildScript.Nuke" />
     </packageSource>
   </packageSourceMapping>
 </configuration>
