--- a/Remotion/Core/ServiceLocation.PerformanceTestConsole/Core.ServiceLocation.PerformanceTestConsole.csproj
+++ b/Remotion/Core/ServiceLocation.PerformanceTestConsole/Core.ServiceLocation.PerformanceTestConsole.csproj
@@ -11,6 +11,10 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.Core.csproj" />
+    <ProjectReference Include="..\Logging.Log4Net\Core.Logging.Log4Net.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
 </Project>
