--- a/Remotion/Core/UnitTests/Core.UnitTests.csproj
+++ b/Remotion/Core/UnitTests/Core.UnitTests.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Development\UnitTesting.Compilation\Development.UnitTesting.Compilation.csproj" />
+    <ProjectReference Include="..\Logging.Log4Net\Core.Logging.Log4Net.csproj" />
     <ProjectReference Include="..\Reflection\Core.Reflection.csproj" />
     <ProjectReference Include="..\Tools\Core.Tools.csproj" />
     <ProjectReference Include="..\..\Development\Core\Development.Core.csproj" />
