--- a/Remotion/Data/DomainObjects.Validation.IntegrationTests/Data.DomainObjects.Validation.IntegrationTests.csproj
+++ b/Remotion/Data/DomainObjects.Validation.IntegrationTests/Data.DomainObjects.Validation.IntegrationTests.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Core\Core.Core.csproj" />
+    <ProjectReference Include="..\..\Core\Logging.Log4Net\Core.Logging.Log4Net.csproj" />
     <ProjectReference Include="..\..\Core\Reflection\Core.Reflection.csproj" />
     <ProjectReference Include="..\..\Development\Core\Development.Core.csproj" />
     <ProjectReference Include="..\..\Globalization\Core\Globalization.Core.csproj" />
@@ -22,6 +23,9 @@
     <ProjectReference Include="..\Core\Data.Core.csproj" />
     <ProjectReference Include="..\DomainObjects.Validation\Data.DomainObjects.Validation.csproj" />
     <ProjectReference Include="..\DomainObjects\Data.DomainObjects.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
 </Project>
