--- a/SecurityManager/Core.UnitTests/SecurityManager.Core.UnitTests.csproj
+++ b/SecurityManager/Core.UnitTests/SecurityManager.Core.UnitTests.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Remotion\Core\Core\Core.Core.csproj" />
+    <ProjectReference Include="..\..\Remotion\Core\Logging.Log4Net\Core.Logging.Log4Net.csproj" />
     <ProjectReference Include="..\..\Remotion\Core\Reflection.CodeGeneration.TypePipe\Core.Reflection.CodeGeneration.TypePipe.csproj" />
     <ProjectReference Include="..\..\Remotion\Core\Reflection\Core.Reflection.csproj" />
     <ProjectReference Include="..\..\Remotion\Core\Tools\Core.Tools.csproj" />
@@ -37,6 +38,9 @@
     <ProjectReference Include="..\..\Remotion\ObjectBinding\Core\ObjectBinding.Core.csproj" />
     <ProjectReference Include="..\..\Remotion\Security\Core\Security.Core.csproj" />
     <ProjectReference Include="..\Core\SecurityManager.Core.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" />
   </ItemGroup>
   <Import Project="..\..\Build\Shared.build.targets" />
 </Project>
