RM-9314 Remove Development.Analyzers.Integration test from SBOM creation

--- a/Remotion/Core/Development.Analyzers.IntegrationTests/Core.Development.Analyzers.IntegrationTests.csproj
+++ b/Remotion/Core/Development.Analyzers.IntegrationTests/Core.Development.Analyzers.IntegrationTests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <ProjectType>Test</ProjectType>
     <UseNetOnly>true</UseNetOnly>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <Import Project="..\..\..\Build\Shared.build.props" />
