--- a/Remotion/Web/Development.Analyzers.IntegrationTests/Web.Development.Analyzers.IntegrationTests.csproj
+++ b/Remotion/Web/Development.Analyzers.IntegrationTests/Web.Development.Analyzers.IntegrationTests.csproj
@@ -4,6 +4,7 @@
     <ProjectType>Test</ProjectType>
     <UseWebForms>true</UseWebForms>
     <UseNetOnly>true</UseNetOnly>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <Import Project="..\..\..\Build\Shared.build.props" />
