RM-9125 Fix package source mapping.

--- a/NuGet.config
+++ b/NuGet.config
@@ -8,6 +8,7 @@
   </packageSources>
   <packageSourceMapping>
     <packageSource key="re-motion Dependencies">
+      <package pattern="CoreForms.Web" />
       <package pattern="CoreForms.Web.*" />
       <package pattern="Fork.Coypu" />
       <package pattern="Remotion.*" />
