--- a/Remotion/Core/Development.Analyzers.IntegrationTests/Core.Development.Analyzers.IntegrationTests.csproj
+++ b/Remotion/Core/Development.Analyzers.IntegrationTests/Core.Development.Analyzers.IntegrationTests.csproj
@@ -16,7 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing.NUnit" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing" />
   </ItemGroup>
 
   <ItemGroup>
